--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "node-project",
-  "version": "1.0.0",
-  "description": "Empty node project",
-  "scripts": {
-    "test": "make tests"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://github.com/petitchevalroux/node-project.git"
-  },
-  "author": "Patrick Poulain",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/petitchevalroux/node-project/issues"
-  },
-  "homepage": "https://github.com/petitchevalroux/node-project#readme",
-  "devDependencies": {
-    "eslint": "^4.4.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "istanbul": "^0.4.5",
-    "js-beautify": "^1.6.14",
-    "mocha": "^4.0.1",
-    "sinon": "^4.1.3"
-  }
+    "name": "@petitchevalroux/datastore-loopback-adapter",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/adapter.js",
+    "scripts": {
+        "test": "make tests"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://github.com/petitchevalroux/node-datastore-loopback-adapter.git"
+    },
+    "author": "Patrick Poulain",
+    "license": "GPL-3.0",
+    "bugs": {
+        "url": "https://github.com/petitchevalroux/node-datastore-loopback-adapter/issues"
+    },
+    "homepage": "https://github.com/petitchevalroux/node-ddatastore-loopback-adapter#readme",
+    "devDependencies": {
+        "eslint": "^4.4.1",
+        "eslint-plugin-promise": "^3.5.0",
+        "istanbul": "^0.4.5",
+        "js-beautify": "^1.6.14",
+        "mocha": "^4.0.1",
+        "sinon": "^4.1.3"
+    },
+    "dependencies": {
+        "bluebird": "^3.5.1",
+        "qs": "^6.5.1",
+        "rest": "^2.0.0"
+    }
 }
