--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "istanbul": "^0.4.5",
         "js-beautify": "^1.6.14",
         "mocha": "^4.0.1",
+        "nock": "^9.1.5",
         "sinon": "^4.1.3"
     },
     "dependencies": {
